# properties-cpp

./: CMakeLists.txt  README.md
cmake/: FindGtest.cmake  PrePush.cmake
data/: CMakeLists.txt  properties-cpp.pc.in
debian/: changelog  control  copyright  libproperties-cpp-dev.install  libproperties-cpp-doc.install  rules
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt
include/com/ubuntu/: connection.h  property.h  signal.h
include/core/: connection.h  property.h  signal.h
tests/: CMakeLists.txt  properties_test.cpp  signals_test.cpp
